[gd_scene load_steps=14 format=3 uid="uid://bttsjij0ss8q0"]

[ext_resource type="Script" uid="uid://c1hyhemrphaxa" path="res://enemies/Frog/frog.gd" id="1_5fl31"]
[ext_resource type="Texture2D" uid="uid://m7jx3eb2ey3e" path="res://enemies/Frog/frog-jump.png" id="1_ld22g"]
[ext_resource type="Texture2D" uid="uid://dbaymly2fej4i" path="res://enemies/Frog/frog-idle.png" id="1_x3351"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4c8v2"]
atlas = ExtResource("1_ld22g")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdygb"]
atlas = ExtResource("1_x3351")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lnah"]
atlas = ExtResource("1_x3351")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ymcb"]
atlas = ExtResource("1_x3351")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2k3k"]
atlas = ExtResource("1_x3351")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m8vy"]
atlas = ExtResource("1_ld22g")
region = Rect2(35, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0eiy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c8v2")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdygb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lnah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ymcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2k3k")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m8vy")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kx4j"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qbjpe"]
size = Vector2(25, 15.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_jdjse"]

[node name="Frog" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_5fl31")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a0eiy")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_0kx4j")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="KillArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
position = Vector2(-0.5, 3.25)
shape = SubResource("RectangleShape2D_qbjpe")

[node name="WeakSpot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeakSpot"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_jdjse")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="KillArea" to="." method="_on_kill_area_body_entered"]
[connection signal="body_entered" from="WeakSpot" to="." method="_on_weak_spot_body_entered"]
